pages/home/components/SearchDashboards/index.module.scss
.searchDashboards {
  .introduction {
    height: 300px;
    display: flex;
    justify-content: flex-end;
    transition: height 0.5s ease;

    &:global(.hidden) {
      height: 0px;
    }
  }
  .search {
    position: relative;
    margin-top: 1rem;

    &:global(::after) {
      content: " ";
      position: absolute;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
      border-radius: 2rem;
      cursor: pointer;
    }
  }
  .text {
    font-weight: 500;
    font-size: 18px;
    line-height: 22px;
    letter-spacing: 0.02em;
    color: #1a3989;
    margin-top: 2rem;
    animation: 0.5s ease blur-in;
  }

  :global {
    @keyframes blur-in {
      0% {
        opacity: 0;
      }
      90% {
        opacity: 0.9;
      }
      100% {
        opacity: 1;
      }
    }
  }
}

